--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,18 @@
     <string name="ma_btnMultiPlayer">MultiPlayer</string>
     <string name="ga_Menu_Reset">Reset</string>
     <string name="ssTvLogo">Connect Four</string>
-    <string name="am_tvPlayer1">Player 1</string>
-    <string name="am_tvPlayer2">Player2</string>
-    <string name="am_tvGridDimension">Grid Dimension</string>
-    <string-array name="am_player">
+    <string-array name="am_player1">
+        <item>Player 1</item>
+        <item>Human</item>
+        <item>Computer</item>
+    </string-array>
+    <string-array name="am_player2">
+        <item>Player 2</item>
         <item>Human</item>
         <item>Computer</item>
     </string-array>
     <string-array name="am_GridDimension">
+        <item>Grid Dimension</item>
         <item>7x6</item>
         <item>5x4</item>
         <item>6x5</item>
